syntax = "proto3";
package proto;
option go_package = "./;proto";

message UserModel{
    uint32 id = 1;
    string user_name = 2;
}

message UserRequest{
    string user_name = 1;
    string password = 2;
    string password_confirm = 3;
}

message UserDetailResponse {
    UserModel user_detail = 1;
    int32 code = 2;
    string msg = 3;
}

service UserService {
    rpc UserLogin(UserRequest) returns(UserDetailResponse);
    rpc UserRegister(UserRequest) returns(UserDetailResponse);
}